--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -4,6 +4,67 @@
 	}
 }
 
+@media all and (max-width: 992px) {
+	.offcanvas-header {
+		display: block;
+	}
+	.mobile-offcanvas {
+		visibility: hidden;
+		transform: translateX(-100%);
+		border-radius: 0;
+		display: block;
+		position: fixed;
+		top: 0;
+		left: 0;
+		height: 100%;
+		z-index: 1200;
+		width: 80%;
+		overflow-y: scroll;
+		overflow-x: hidden;
+		transition: visibility 0.2s ease-in-out, transform 0.2s ease-in-out;
+		background-color: #fff !important;
+	}
+	.breadcrumbs {
+		margin-top: 56px;
+	}
+	.header-vrg .navbar-vrg {
+		height: 100%;
+	}
+	.header-vrg .navbar2{
+		background: #fff;
+		box-shadow: 0 -2px 5px #8a8a8a;
+	}
+	.navbar-expand-lg .navbar-nav .nav-item:last-child .nav-link {
+		margin-left: 0;
+	}
+	.btn-reg {
+		text-align: center;
+	}
+	.cal-number {
+		font-size: 26px;
+	}
+	html:lang(ar) .mobile-offcanvas {
+		transform: translateX(100%);
+	}
+
+	.mobile-offcanvas.show {
+		visibility: visible;
+		transform: translateX(0);
+	}
+
+	.nav-cont {
+		display: block !important;
+		padding-right: auto !important;
+		padding-left: auto !important;
+	}
+	.dropdown-menu {
+		border: none;
+	}
+	.nav-item {
+		border-bottom: 1px solid #eaeaea;
+	}
+}
+
 @media (min-width: 768px){
 	.navbar-toggle {
 		display: none;
@@ -16,6 +77,9 @@
 	}
 	.table-vr {
 		margin: 1px;
+	}
+	.logo-img {
+		max-width: 99px;
 	}
 }
 
@@ -62,5 +126,21 @@
 	}
 	.statistics .cover img {
 		width: 20px;
+	}
+	.section-page-content {
+		padding: 20px 0;
+	}
+	.blog-page .item .excerpt {
+		overflow: unset;
+		display: block;
+	}
+	.blog-page .title {
+		margin-top: 10px;
+		margin-bottom: 5px;
+	}
+	.blog-page .item {
+		margin-bottom: 20px;
+		border-bottom: 12px solid #f5f5f5;
+		padding-bottom: 20px;
 	}
 }
