--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,9 +89,68 @@ img {
 	background: #ffcc01;
 	border: 0;
 }
+
+body.offcanvas-active {
+  overflow: hidden;
+}
+.offcanvas-header {
+	display: none;
+}
+.screen-overlay {
+	width: 0%;
+	height: 100%;
+	z-index: 30;
+	position: fixed;
+	top: 0;
+	left: 0;
+	opacity: 0;
+	visibility: hidden;
+	background-color: rgba(34, 34, 34, 0.6);
+	transition: opacity 0.2s linear, visibility 0.1s, width 1s ease-in;
+}
+.screen-overlay.show {
+	transition: opacity 0.5s ease, width 0s;
+	opacity: 1;
+	width: 100%;
+	visibility: visible;
+}
+.header-vrg .navbar-vrg{
+	background: #fff;
+	box-shadow: 0 -2px 5px #8a8a8a;
+	height: 72px;
+}
+.navbar-expand-lg .navbar-nav .nav-item .nav-link {
+	font-size: 16px;
+	font-weight: 600;
+	line-height: normal;
+	color: #001a39;
+	padding:  10px 19px;
+}
+.navbar-expand-lg .navbar-nav .nav-item .nav-link:hover,.navbar-expand-lg .navbar-nav .nav-item .nav-link:focus,.navbar-expand-lg .navbar-nav .nav-item.active .nav-link {
+	color: #197dc8;
+}
+.navbar-expand-lg .navbar-nav .nav-item:last-child .nav-link {
+	margin-left:  38px;
+}
+.navbar-expand-lg .navbar-nav .nav-item .nav-link.btn-reg {
+	color: #fff;
+}
+.breadcrumbs {
+	margin-top: 72px;
+	background: #f9f9f9;
+}
+.breadcrumb {
+	border-radius: 0;
+	background: transparent;
+	margin-bottom: 0;
+}
+.breadcrumb-item+.breadcrumb-item::before {
+    content: ">";
+}
+
+/* Start section css */
 .section.section-hero {
 	padding: 0;
-	/* background: #011b33; */
 	background-image:url('/assets/img/bg_hero.jpg');
 	background-size:cover;
 }
@@ -438,17 +497,20 @@ input[type=range]::-ms-track {
 .ac-slider .slick-list {
 	margin: 0 -27px;
 }
-.section-blog .item a {
+.section-blog .item a,.section-page-content .item a {
 	display: block;
 }
-.section-blog .thumb {
+.section-blog .thumb,.section-page-content .thumb{
 	position: relative;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
 	padding-top: 60%;
 }
-.section-blog .thumb:before {
+.section-page-content .thumb{
+	padding-top: 60%;
+}
+.section-blog .thumb:before,.section-page-content .thumb:before {
 	content: "";
 	padding-top: 55%;
 }
@@ -601,9 +663,25 @@ input[type=range]::-ms-track {
 }
 .excerpt {
 	font-size: 16px;
-	letter-spacing: 0.17px;
 	color: #001a39;
 	line-height: 1.3;
+}
+.blog-page .item {
+	margin-bottom: 25px;
+}
+.blog-page .item .excerpt {
+	border-bottom: 1px solid #9993;
+	padding-bottom: 20px;
+	margin-bottom: 10px;
+	color: #7b93a5;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 2; /* number of lines to show */
+	-webkit-box-orient: vertical;
+}
+.datetime {
+	color: #7b93a5;
 }
 .section-blog .item, .section-testimonial .item {
 	border-radius: 16px;
@@ -672,4 +750,163 @@ input[type=range]::-ms-track {
 	color: #001a39;
 	max-width: 356px;
 	line-height: 1.3;
+}
+.section-page-content {
+	padding: 45px 0;
+}
+.section-page-content .container,.page .breadcrumbs .container {
+	max-width: 1100px;
+}
+.sub-heading {
+	font-size: 14px;
+	text-transform: uppercase;
+	color: #1499fd;
+	font-weight: bold;
+	margin-bottom: 5px;
+}
+.heading {
+	font-family: Nunito;
+	font-size: 32px;
+	font-weight: 900;
+	line-height: 1.3;
+	color: #001a39;
+}
+.blog-page .heading {
+	margin-bottom: 30px;
+}
+.section-page-content .info {
+	font-size: 14px;
+	font-weight: 500;
+	color: #7b93a5;
+	text-transform: uppercase;
+	margin-bottom: 10px;
+}
+.section-page-content .info span {
+	font-weight: bold;
+	color: #00bff3;
+}
+.content,.content p {
+	line-height: 1.3;
+	font-size: 16px;
+	text-align: justify;
+	margin-bottom: 30px;
+}
+.share-icons {
+	
+}
+.share-icons .icon,.share-icons .icon a {
+	color: #074fa4;
+	font-size: 14px;
+	font-weight: 600;
+}
+.share-icons .icon a .fa,.share-icons .icon a .fab {
+	font-size: 24px;
+	line-height: 24px;
+	vertical-align: bottom;
+	margin-right: 8px;
+}
+.related-post {
+	padding: 15px 0;
+	border-top: 1px solid #9993;
+	border-bottom: 1px solid #9993;
+}
+.related-post .icon {
+	width: 24px;
+	height: 24px;
+	line-height: 25px;
+	color: #fff;
+	background: #1499fd;
+	border-radius: 99px;
+	text-align: center;
+}
+.related-post .left .icon {
+	margin-right: 10px;
+}
+.related-post .right .icon {
+	margin-left: 10px;
+}
+.related-post .text {
+	font-size: 16px;
+	font-weight: 500;
+	color: #000;
+	letter-spacing: 0;
+	max-width: 280px;
+}
+.related-post .right .text {
+	text-align: right;
+}
+.widget {
+	padding: 15px 0;
+	margin-bottom: 30px;
+}
+.footer .widget {
+	padding: 0 15px;
+}
+.widget,.widget .title,.widget a {
+	font-family: Nunito;
+	font-size: 16px;
+	color: #000;
+	font-weight: 500;
+}
+.widget .title,.blog-page .title {
+	font-weight: bold;
+	font-size: 18px;
+	font-family: Nunito;
+}
+.widget li a {
+	padding: 15px 0;
+	border-bottom: 1px solid #9993;
+	display: block;
+}
+.widget li a:hover,.widget li a:focus,.related-post a:hover .text {
+	color: #1499fd;
+}
+.widget li:first-child a{
+	padding-top: 0;
+}
+.widget li:last-child a{
+	padding-bottom: 0;
+	border-bottom: 0;
+}
+.footer .widget,.footer .widget a,.footer .widget .title {
+	color: #001a39;
+}
+.footer .widget .title {
+	margin-bottom: 15px;
+}
+.footer .widget li a {
+	padding: 3px 0;
+	border: 0;
+}
+.footer-logo {
+	margin-bottom: 24px;
+}
+.footer .top-footer {
+	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+	padding: 60px 0 30px;
+	background-image: linear-gradient(to top, #ffffffe8,#ffffffe8),linear-gradient(to bottom, #1499fd, #1499fd);
+}
+.footer .copyright {
+	padding: 20px 0;
+	background-image: linear-gradient(to top, #ffffffe8,#ffffffe8),linear-gradient(to bottom, #1499fd, #1499fd);
+}
+.blog-page .list-item {
+	margin-bottom: 65px;
+}
+.page-link {
+    color: #212b36;
+    border-radius: 3px;
+    margin: 0 3px;
+    font-weight: bold;
+    font-size: 16px;
+    width: 32px;
+    height: 32px;
+    padding: 0;
+    line-height: 32px;
+    text-align: center;
+}
+.page-item.active .page-link,.page-link:hover {
+	background: none;
+	border-color: #1499fd;
+	color: #1499fd;
 }
