--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -84,7 +84,7 @@
 }
 
 @media (max-width: 479px){
-	.owl-stage {
+	.home_blog_carousel .owl-stage,.home_testimonial_carousel .owl-stage {
 		margin-left: -30px;
 	}
 	.products-slider .owl-stage {
@@ -119,6 +119,7 @@
 	.table-vr .row > div:nth-child(2) {padding: 0 15px 0 0 !important;}
 	.section-download .col-md-6:nth-child(2) {
 		position: absolute;
+		height: 100%;
 	}
 	.section-download .content {
 		position: relative;
@@ -163,5 +164,18 @@
 		margin-bottom: 20px;
 		border-bottom: 12px solid #f5f5f5;
 		padding-bottom: 20px;
+	}
+	.section-auth .inner {
+		padding: 20px;
+		border-radius: 15px;
+	}
+	.auth_info_slide {
+		padding: 30px 0;
+	}
+	.auth_info_slide .info {
+		padding: 0 15px;
+	}	
+	.auth_info_slide .info p{
+		text-align: justify;
 	}
 }
