--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -88,7 +88,7 @@
 		margin-left: -30px;
 	}
 	.products-slider .owl-stage {
-		margin-left: -60px;
+		margin-left: -30px;
 	}
 	.section-wcu {
 		background-size: contain;
@@ -98,7 +98,10 @@
 		margin-bottom: 36px;
 	}
 	.section-products .container {
-		display: flex;
+		/* display: flex; */
+	}
+	.section-products .p-col .title {
+		font-size: 22px;
 	}
 	.box-cal-temp {
 		border-radius: 16px;
