--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -680,9 +680,14 @@ button.btn-reg {
 	font-size: 22px;
 }
 .excerpt {
-	font-size: 16px;
-	color: #001a39;
-	line-height: 1.3;
+    font-size: 16px;
+    color: #001a39;
+    line-height: 1.3;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
 }
 .blog-page .item {
 	margin-bottom: 25px;
