--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -677,7 +677,12 @@ button.btn-reg {
 	font-weight: bold;
 }
 .section-blog .info h3 {
-	font-size: 22px;
+    font-size: 22px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 .excerpt {
     font-size: 16px;
